// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewOfTable produces valid JSON when given Table at start of flop; players have: called, checked and viewerId in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [
    Object {
      "color": "#000000",
      "rank": "T",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "J",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "Q",
      "suit": "s",
      "suitChar": "♠",
    },
  ],
  "currentBet": undefined,
  "currentPosition": 7,
  "currentRound": "flop",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": Array [
        Object {
          "color": "#000000",
          "rank": "2",
          "suit": "s",
          "suitChar": "♠",
        },
        Object {
          "color": "#000000",
          "rank": "3",
          "suit": "s",
          "suitChar": "♠",
        },
      ],
      "id": "Jane",
      "isSelf": true,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2990,
    },
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9189,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 1990,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 40,
      "eligiblePlayers": Array [
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": Array [
            Object {
              "color": "#000000",
              "rank": "2",
              "suit": "s",
              "suitChar": "♠",
            },
            Object {
              "color": "#000000",
              "rank": "3",
              "suit": "s",
              "suitChar": "♠",
            },
          ],
          "id": "Jane",
          "isSelf": true,
          "left": false,
          "legalActions": undefined,
          "stackSize": 2990,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Juan",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 9189,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "John",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 1990,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Jay",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 31405,
        },
      ],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of flop; players have: called, checked and viewerId not in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [
    Object {
      "color": "#000000",
      "rank": "T",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "J",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "Q",
      "suit": "s",
      "suitChar": "♠",
    },
  ],
  "currentBet": undefined,
  "currentPosition": 7,
  "currentRound": "flop",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2990,
    },
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9189,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 1990,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 40,
      "eligiblePlayers": Array [
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Jane",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 2990,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Juan",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 9189,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "John",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 1990,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Jay",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 31405,
        },
      ],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of pre-flop and viewerId in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [],
  "currentBet": 10,
  "currentPosition": 1,
  "currentRound": "pre-flop",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 10,
      "folded": false,
      "holeCards": Array [
        Object {
          "color": "#000000",
          "rank": "2",
          "suit": "s",
          "suitChar": "♠",
        },
        Object {
          "color": "#000000",
          "rank": "3",
          "suit": "s",
          "suitChar": "♠",
        },
      ],
      "id": "Jane",
      "isSelf": true,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2990,
    },
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9199,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2000,
    },
    null,
    null,
    null,
    Object {
      "bet": 5,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 31410,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 0,
      "eligiblePlayers": Array [],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of pre-flop and viewerId not in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [],
  "currentBet": 10,
  "currentPosition": 1,
  "currentRound": "pre-flop",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 10,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2990,
    },
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9199,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2000,
    },
    null,
    null,
    null,
    Object {
      "bet": 5,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 31410,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 0,
      "eligiblePlayers": Array [],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of river; players have called, checked, stoodUp, bet, folded, raised and viewerId in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [
    Object {
      "color": "#000000",
      "rank": "T",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "J",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "Q",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "K",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "A",
      "suit": "s",
      "suitChar": "♠",
    },
  ],
  "currentBet": undefined,
  "currentPosition": 0,
  "currentRound": "river",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": Array [
        Object {
          "color": "#000000",
          "rank": "2",
          "suit": "s",
          "suitChar": "♠",
        },
        Object {
          "color": "#000000",
          "rank": "3",
          "suit": "s",
          "suitChar": "♠",
        },
      ],
      "id": "Jane",
      "isSelf": true,
      "left": false,
      "legalActions": Array [
        "check",
        "bet",
        "fold",
      ],
      "stackSize": 2840,
    },
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9189,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 1840,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": true,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 340,
      "eligiblePlayers": Array [
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": Array [
            Object {
              "color": "#000000",
              "rank": "2",
              "suit": "s",
              "suitChar": "♠",
            },
            Object {
              "color": "#000000",
              "rank": "3",
              "suit": "s",
              "suitChar": "♠",
            },
          ],
          "id": "Jane",
          "isSelf": true,
          "left": false,
          "legalActions": Array [
            "check",
            "bet",
            "fold",
          ],
          "stackSize": 2840,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "John",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 1840,
        },
      ],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of river; players have called, checked, stoodUp, bet, folded, raised and viewerId not in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [
    Object {
      "color": "#000000",
      "rank": "T",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "J",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "Q",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "K",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "A",
      "suit": "s",
      "suitChar": "♠",
    },
  ],
  "currentBet": undefined,
  "currentPosition": 0,
  "currentRound": "river",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2840,
    },
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9189,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 1840,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": true,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 340,
      "eligiblePlayers": Array [
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Jane",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 2840,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "John",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 1840,
        },
      ],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of second round and viewerId in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 1,
  "buyIn": 1000,
  "communityCards": Array [],
  "currentBet": 10,
  "currentPosition": 3,
  "currentRound": "pre-flop",
  "dealerPosition": 7,
  "handNumber": 2,
  "players": Array [
    Object {
      "bet": 5,
      "folded": false,
      "holeCards": Array [
        Object {
          "color": "#000000",
          "rank": "2",
          "suit": "s",
          "suitChar": "♠",
        },
        Object {
          "color": "#000000",
          "rank": "3",
          "suit": "s",
          "suitChar": "♠",
        },
      ],
      "id": "Jane",
      "isSelf": true,
      "left": false,
      "legalActions": undefined,
      "stackSize": 3005,
    },
    Object {
      "bet": 10,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9179,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2010,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": true,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 0,
      "eligiblePlayers": Array [],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 0,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of second round and viewerId not in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 1,
  "buyIn": 1000,
  "communityCards": Array [],
  "currentBet": 10,
  "currentPosition": 3,
  "currentRound": "pre-flop",
  "dealerPosition": 7,
  "handNumber": 2,
  "players": Array [
    Object {
      "bet": 5,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 3005,
    },
    Object {
      "bet": 10,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9179,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2010,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": true,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 0,
      "eligiblePlayers": Array [],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 0,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of turn; players have: called, checked, stoodUp, bet, folded and viewerId in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [
    Object {
      "color": "#000000",
      "rank": "T",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "J",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "Q",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "K",
      "suit": "s",
      "suitChar": "♠",
    },
  ],
  "currentBet": undefined,
  "currentPosition": 0,
  "currentRound": "turn",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": Array [
        Object {
          "color": "#000000",
          "rank": "2",
          "suit": "s",
          "suitChar": "♠",
        },
        Object {
          "color": "#000000",
          "rank": "3",
          "suit": "s",
          "suitChar": "♠",
        },
      ],
      "id": "Jane",
      "isSelf": true,
      "left": false,
      "legalActions": Array [
        "check",
        "bet",
        "fold",
      ],
      "stackSize": 2940,
    },
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9189,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 1940,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": true,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 140,
      "eligiblePlayers": Array [
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": Array [
            Object {
              "color": "#000000",
              "rank": "2",
              "suit": "s",
              "suitChar": "♠",
            },
            Object {
              "color": "#000000",
              "rank": "3",
              "suit": "s",
              "suitChar": "♠",
            },
          ],
          "id": "Jane",
          "isSelf": true,
          "left": false,
          "legalActions": Array [
            "check",
            "bet",
            "fold",
          ],
          "stackSize": 2940,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "John",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 1940,
        },
      ],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table at start of turn; players have: called, checked, stoodUp, bet, folded and viewerId not in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [
    Object {
      "color": "#000000",
      "rank": "T",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "J",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "Q",
      "suit": "s",
      "suitChar": "♠",
    },
    Object {
      "color": "#000000",
      "rank": "K",
      "suit": "s",
      "suitChar": "♠",
    },
  ],
  "currentBet": undefined,
  "currentPosition": 0,
  "currentRound": "turn",
  "dealerPosition": 3,
  "handNumber": 1,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2940,
    },
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9189,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 1940,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": true,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": true,
      "legalActions": undefined,
      "stackSize": 31405,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 140,
      "eligiblePlayers": Array [
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "Jane",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 2940,
        },
        Object {
          "bet": 0,
          "folded": false,
          "holeCards": undefined,
          "id": "John",
          "isSelf": false,
          "left": false,
          "legalActions": undefined,
          "stackSize": 1940,
        },
      ],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table with seated players and viewerId in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [],
  "currentBet": undefined,
  "currentPosition": undefined,
  "currentRound": undefined,
  "dealerPosition": 3,
  "handNumber": 0,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": true,
      "left": false,
      "legalActions": undefined,
      "stackSize": 3000,
    },
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9199,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2000,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 31415,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 0,
      "eligiblePlayers": Array [],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;

exports[`viewOfTable produces valid JSON when given Table with seated players and viewerId not in players 1`] = `
Object {
  "bigBlind": 10,
  "bigBlindPosition": 0,
  "buyIn": 1000,
  "communityCards": Array [],
  "currentBet": undefined,
  "currentPosition": undefined,
  "currentRound": undefined,
  "dealerPosition": 3,
  "handNumber": 0,
  "players": Array [
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jane",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 3000,
    },
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Juan",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 9199,
    },
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "John",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 2000,
    },
    null,
    null,
    null,
    Object {
      "bet": 0,
      "folded": false,
      "holeCards": undefined,
      "id": "Jay",
      "isSelf": false,
      "left": false,
      "legalActions": undefined,
      "stackSize": 31415,
    },
    null,
    null,
  ],
  "pots": Array [
    Object {
      "amount": 0,
      "eligiblePlayers": Array [],
      "winners": undefined,
    },
  ],
  "smallBlind": 5,
  "smallBlindPosition": 7,
  "winners": undefined,
}
`;
